# scdl-cli

./: .eslintrc.js  .gitignore  CLAUDE.md  README.md  git-commit.sh  pyproject.toml  requirements.txt
src/scdl_cli/: __init__.py  main.py
src/scdl_cli/config/: __init__.py  manager.py
src/scdl_cli/core/: __init__.py  downloader.py  sync.py
src/scdl_cli/utils/: __init__.py  client_id.py  validators.py
